examples/memory/negative/03_memory_in_struct.skd
// Negative memory example 03: Memory cannot be stored in a struct field.

struct MemoryHolder {
    Memory frame_memory
}
